--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "copy-webpack-plugin": "^6.1.1",
     "core-js": "^3.6.5",
+    "d3": "4",
+    "path": "^0.12.7",
+    "topojson": "^3.0.2",
     "vue": "^3.0.0-0"
   },
   "devDependencies": {
